use-cases/app-protect/complete/ingress-tea.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tea-application
  namespace: app-protect
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/tea"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=10.1.1.7:515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: tea.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
